# TelloDrone

./: README.md  build.bat  gui.cpp  telloc.h  telloc.lib
TelloControls/: interface.c  tello4me.c
TelloControls/tellopy/: .gitignore  README.md  build.bat  setup.py  tellopy.c
TelloControls/tellopy/telloc/: CMakeLists.txt  main.c  main_windows.c  telloc_unix.c  telloc_windows.c  video.c  video.h
TelloControls/tellopy/tellopy/: __init__.py
